create github pages

--- a/page2.html
+++ b/page2.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="timeline2 cid-ri75hlxY8E" id="timeline2-1e">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="timeline2 cid-ri75hlxY8E" id="timeline2-1e">
 
     
 
